added more events to event management form

--- a/kindred_causes/main/templates/event_browser.html
+++ b/kindred_causes/main/templates/event_browser.html
@@ -53,6 +53,96 @@
         <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
         <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
       </tr>
+      <tr>
+        <td>Event 4</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 5</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 6</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 7</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 8</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 9</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 10</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 11</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
+      <tr>
+        <td>Event 12</td>
+        <td>This is the event field, where we write our information about the events that people can see</td>
+        <td>The School</td>
+        <td>None</td>
+        <td>3/18/25</td>
+        <td>Low</td>
+        <td><a role="button" class="btn btn-accent" type="submit" href="{% url 'matching_form' %}"> Sign Up</a></td>
+        <td><a role="button" class="btn btn-secondary" type="submit"> Manage</a></td>
+      </tr>
     </tbody>
   </table>
 </div>
