--- a/kindred_causes/main/static/css/output.css
+++ b/kindred_causes/main/static/css/output.css
@@ -2501,6 +2501,9 @@
   .min-h-screen {
     min-height: 100vh;
   }
+  .w-2 {
+    width: calc(var(--spacing) * 2);
+  }
   .w-3 {
     width: calc(var(--spacing) * 3);
   }
@@ -2509,6 +2512,9 @@
   }
   .w-6 {
     width: calc(var(--spacing) * 6);
+  }
+  .w-7 {
+    width: calc(var(--spacing) * 7);
   }
   .w-8 {
     width: calc(var(--spacing) * 8);
@@ -2543,6 +2549,9 @@
   .w-46 {
     width: calc(var(--spacing) * 46);
   }
+  .w-50 {
+    width: calc(var(--spacing) * 50);
+  }
   .w-52 {
     width: calc(var(--spacing) * 52);
   }
@@ -2554,6 +2563,12 @@
   }
   .w-70 {
     width: calc(var(--spacing) * 70);
+  }
+  .w-100 {
+    width: calc(var(--spacing) * 100);
+  }
+  .w-200 {
+    width: calc(var(--spacing) * 200);
   }
   .w-full {
     width: 100%;
@@ -2858,10 +2873,22 @@
     --badge-color: var(--color-primary);
     color: var(--color-primary-content);
   }
+  .link-accent {
+    color: var(--color-accent);
+    &:hover {
+      color: color-mix(in oklab, var(--color-accent) 80%, #000);
+    }
+  }
   .link-primary {
     color: var(--color-primary);
     &:hover {
       color: color-mix(in oklab, var(--color-primary) 80%, #000);
+    }
+  }
+  .link-secondary {
+    color: var(--color-secondary);
+    &:hover {
+      color: color-mix(in oklab, var(--color-secondary) 80%, #000);
     }
   }
   .text-neutral-content {
